<?xml version="1.0" encoding="utf-8"?><!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
<resources>
    <string name="app_name">Reference Browser</string>

    <!-- Text shown in the toolbar if it is empty -->
    <string name="toolbar_hint">Search or enter address</string>

    <!-- Menu option on the toolbar to open a new tab-->
    <string name="menu_action_add_tab">Add New Tab</string>

    <!-- Menu option on the toolbar to close all tabs-->
    <string name="menu_action_close_tabs">Close All Tabs</string>
    <string name="menu_action_close_tabs_private">Close Private Tabs</string>

    <!-- Preference summary for settings related sign in -->
    <string name="preferences_sign_in_summary">Sync your tabs and history</string>

    <!-- Preference summary for pairing sign in -->
    <string name="preferences_pair_sign_in_summary">Pair with Firefox Desktop</string>

    <!-- Preference summary for settings related to send telemetry data -->
    <string name="preferences_use_telemetry_summary">Send usage data</string>

    <!-- Preference for settings related to changing the default browser -->
    <string name="preferences_make_default_browser">Make default browser</string>

    <string name="preferences_compose_ui">Use experimental Jetpack Compose UI</string>

    <string name="preferences_autofill">Autofill apps</string>
    <string name="preferences_autofill_summary">Autofill logins and passwords in other apps</string>

    <!-- Preference enables sync for history -->
    <string name="preferences_sync_history">History</string>

    <!-- Preference enables sync for synced tabs -->
    <string name="preferences_sync_tabs">Open tabs</string>

    <!-- Preference enables sync for synced tabs -->
    <string name="preferences_sync_passwords">Passwords</string>

    <!-- Preference enabling remote debugging -->
    <string name="preferences_remote_debugging">Remote debugging via USB</string>

    <!-- Preference for enabling tracking protection in normal mode -->
    <string name="preferences_tracking_protection_normal">Enable in Normal Browsing Mode</string>

    <!-- Preference for enabling tracking protection in private mode -->
    <string name="preferences_tracking_protection_private">Enable in Private Browsing Mode</string>

    <!-- Preference about page -->
    <string name="preferences_about_page">About Reference Browser</string>

    <!-- Preference for signing in -->
    <string name="sign_in">Sign in</string>

    <!-- Preference for signing in -->
    <string name="pair_sign_in">Sign in with a QR code</string>

    <!-- Preference for settings related to the signed in Firefox Account -->
    <string name="firefox_account">Firefox Account</string>

    <!-- Preference for signing out -->
    <string name="sign_out">Sign out</string>

    <!-- Preference for syncing immediately -->
    <string name="sync_now">Sync now</string>

    <!-- Preference for syncing immediately -->
    <string name="syncing">Syncing</string>

    <!-- Preference summary indicating that sync failed along with last time it succeeded -->
    <string name="preferences_sync_failed_summary">Sync failed. Last success: %s</string>

    <!-- Preference summary showing never synced -->
    <string name="preferences_sync_failed_never_synced_summary">Sync failed. Last synced: never</string>

    <!-- Preference summary showing last time synced -->
    <string name="preferences_sync_last_synced_summary">Last synced: %s</string>

    <!-- Preference summary showing never synced -->
    <string name="preferences_sync_never_synced_summary">Last synced: never</string>

    <!-- Preference for privacy -->
    <string name="privacy">Privacy</string>

    <!-- Preference summary for privacy -->
    <string name="preferences_privacy_summary">Tracking, cookies, data choices</string>

    <!-- Preference category for sync settings -->
    <string name="sync_category">Choose what to sync</string>

    <!-- Preference for open links in apps -->
    <string name="open_links_in_apps">Open links in apps</string>

    <!-- Preference category for developer tools -->
    <string name="developer_tools_category">Developer tools</string>

    <!-- Preference for settings related turn on telemetry data-->
    <string name="use_telemetry">Use Telemetry</string>

    <!-- Preference category for Mozilla about/legal etc. -->
    <string name="mozilla_category">Mozilla</string>

    <!-- Preference category for tracking protection -->
    <string name="tracker_category">Tracking Protection</string>

    <!-- Preference category for data choices e.g. usage data -->
    <string name="data_choices_category">Data Choices</string>

    <!-- Menu option on the toolbar that takes you to settings page-->
    <string name="settings">Settings</string>

    <!-- Menu option on the toolbar that takes you to synced tabs page-->
    <string name="synced_tabs">Synced Tabs</string>

    <!-- Menu option on the toolbar that takes you to account settings page-->
    <string name="account_settings">Account Settings</string>

    <!-- Menu option on the toolbar that takes you to privacy settings page-->
    <string name="privacy_settings">Privacy Settings</string>

    <!-- Menu option on the toolbar that takes you to pairing QR code page-->
    <string name="pair_preferences">Pairing</string>
    <string name="pair_instructions">Open firefox.com/pair in Firefox Desktop for your pairing code</string>

    <!-- Snackbar message when a non fatal crash happen-->
    <string name="crash_report_non_fatal_message">Sorry. We crashed</string>

    <!-- Snackbar action button when a non fatal crash happen-->
    <string name="crash_report_non_fatal_action">Report</string>

    <!-- Private Browsing -->
    <string name="private_browsing_title">Private Browsing</string>
    <string name="private_browsing_body"><![CDATA[
<h1>Private Browsing</h1>
<p>When you browse in a Private Window, Reference Browser <strong>does not save</strong>:</p>
<ul class="two-column">
    <li>visited pages</li>
    <li>searches</li>
    <li>cookies</li>
    <li>temporary files</li>
</ul>
<p>Private Browsing <strong>doesn\'t make you anonymous</strong> on the Internet. Your employer or Internet service provider can still know what page you visit.</p>
<p class="about-info">Learn more about <a id="learnMore">Private Browsing</a>.</p>
     ]]></string>

    <!-- Title of the notification shown on app startup informing about the data policy -->
    <string name="datareporting_notification_title">Reference Browser</string>

    <!-- Summary of the notification shown on app startup informing about the data policy -->
    <string name="datareporting_notification_summary">To improve your experience, Reference Browser automatically sends some information to Mozilla.</string>

    <string name="default_notification_channel">Browser</string>

    <!-- About content -->
    <string name="about_content"><![CDATA[
<p>%1$s puts you in control.</p>
<p>Use it as a reference to:
    <br>&bull; Learn how to build your own browser.
    <br>&bull; Contribute to making it easier to build browsers.
    <br>&bull; File bug reports!
</p>
<p>%1$s is produced by Mozilla. Our mission is to foster a healthy, open Internet.<br/>
    ]]></string>

    <string name="menu_share_with">Share with…</string>
    <string name="toast_copied">Copied!</string>

    <!-- Send Tab -->
    <!-- Name of the "receive tabs" notification channel. Displayed in the "App notifications" system settings for the app -->
    <string name="fxa_received_tab_channel_name">Received tabs</string>
    <!-- Description of the "receive tabs" notification channel. Displayed in the "App notifications" system settings for the app -->
    <string name="fxa_received_tab_channel_description">Notifications for tabs received from other Firefox devices.</string>
    <!--  The body for these is the URL of the tab received  -->
    <string name="fxa_tab_received_notification_name">Tab Received</string>
    <!-- %s is the device name -->
    <string name="fxa_tab_received_from_notification_name">Tab from %s</string>

    <!-- Synced Tabs -->
    <string name="synced_tabs_connect_to_sync_account">Connect with a Firefox Account.</string>
    <string name="synced_tabs_connect_another_device">Connect another device.</string>
    <string name="synced_tabs_reauth">Please re-authenticate.</string>
    <string name="synced_tabs_enable_tab_syncing">Please enable tab syncing.</string>

    <!-- Add-on Preferences -->
    <!-- Preference to customize the configured AMO (addons.mozilla.org) collection -->
    <string name="preferences_customize_amo_collection">Custom Add-on collection</string>
    <!-- Button caption to confirm the add-on collection configuration -->
    <string name="customize_addon_collection_ok">OK</string>
    <!-- Button caption to abort the add-on collection configuration -->
    <string name="customize_addon_collection_cancel">Cancel</string>
    <!-- Hint displayed on input field for custom collection name -->
    <string name="customize_addon_collection_hint">Collection name</string>
    <!-- Hint displayed on input field for custom collection user ID-->
    <string name="customize_addon_collection_user_hint">Collection owner (User ID)</string>
    <!-- Toast shown after confirming the custom add-on collection configuration -->
    <string name="toast_customize_addon_collection_done">Add-on collection modified. Quitting the application to apply changes…</string>

    <!-- Easter Egg -->
    <string name="easter_egg">Easter Egg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_easter_egg_hard">Hard</string>
    <string name="label_easter_egg_medium">Medium</string>
    <string name="label_easter_egg_easy">Easy</string>
    <string name="text_easter_egg_choose_difficulty">Welcome to the easter egg hunt! Choose your difficulty level to proceed!</string>
    <string name="label_submit_button">Submit</string>
    <string name="label_hint_answer">Answer</string>
    <string name="label_get_reward">Get Reward</string>
    <string name="label_cancel">Cancel</string>
    <string name="text_reward">Congratulations! You got it right! </string>
</resources>
